# CharmCards

./: .env  .env.local  APP_OVERVIEW.md  BITCOIN_MONITORING.md  CHARMS_ANALYSIS.md  CONFIGURATION_VALIDATION.md  DEPLOYMENT_GUIDE.md  END_TO_END_FLOW_VERIFIED.md  ENV_SETUP.md  FINAL_MINT_READINESS.md  MINT_FLOW_VERIFICATION.md  PRUNED_UTXO_FIX.md  QUICK_TEST_GUIDE.md  README.md  READY_WHEN_BITCOIN_READY.md  SYNC_OPTIMIZATION_SUMMARY.md  SYSTEM_READINESS.md  VERCEL_DEPLOYMENT.md  check-bitcoin-rpc.sh  check-bitcoin-sync.sh  check-services.sh  check-sync-status.sh  check-utxos.sh  check-when-ready.sh  disable-pruning-reset-node.sh  full-sync-status.sh  get-assumevalid.sh  maximize-sync-speed.sh  monitor-bitcoin-core.sh  monitor-bitcoin-health.sh  monitor-bitcoin-sync.sh  monitor-resources.sh  monitor-sync-progress.sh  monitor-sync-speed.sh  next.config.ts  optimize-bitcoin-node.sh  package-lock.json  package.json  quick-status.sh  setup-bitcoin-node.sh  (+10 more)
api/: .env  .env.example  package-lock.json  package.json  vercel.json
api/api/: broadcast.ts  gift-cards.ts  health.ts  index.ts  utxo.ts
api/src/: server.ts
gift-cards/: .temp-spell.yaml  Cargo.toml  README.md
gift-cards/spells/: mint-gift-card.yaml  mint-nft.yaml  mint-token.yaml  redeem-balance.yaml  send.yaml  transfer-tokens.yaml
gift-cards/src/: lib.rs  main.rs
src/: middleware.ts
src/app/: globals.css  layout.tsx  page.tsx
src/components/: taproot-address-checker.tsx  wallet-authorization-provider.tsx  wallet-error-handler.tsx
src/context/: CartContext.tsx  Web3Provider.tsx
src/hooks/: use-charms.ts  (+3 more)
(+75 files in other folders)
